# CPP-MathEngine

./: CMakeLists.txt  README.md
include/: MathEngine.h
include/Algebra/: AlgebraicTerm.h  BasicAlgebraicExpression.h  Cubic.h  Quadratic.h
include/Core/: Complex.h  ExpressionEvaluater.h  Function.h  Functions.h  Utils.h
include/Errors/: MathEngineErrors.h
main/: main.cpp
source/: MathEngine.cpp
source/Algebra/: AlgebraicTerm.cpp  BasicAlgebraicExpression.cpp  Cubic.cpp  Quadratic.cpp
source/Core/: Complex.cpp  ExpressionEvaluater.cpp  Function.cpp  Utils.cpp
source/MathConsole/: MathConsole.cpp
